Changed IStringSearcher interface, so classes too

--- a/searchAlgorithmsOfSubstring/searchAlgorithmsOfSubstring/searchAlgorithmsOfSubstring.csproj
+++ b/searchAlgorithmsOfSubstring/searchAlgorithmsOfSubstring/searchAlgorithmsOfSubstring.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Boyer-Moore.cs" />
     <Compile Include="IStringSearcher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
