Added some changes to Find method in SkipList class Added test program Added UnitTests

--- a/SkipList/SkipListLib/SkipListLib.csproj
+++ b/SkipList/SkipListLib/SkipListLib.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAction.cs" />
     <Compile Include="SkipList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
