--- a/searchAlgorithmsOfSubstring/searchAlgorithmsOfSubstring/searchAlgorithmsOfSubstring.csproj
+++ b/searchAlgorithmsOfSubstring/searchAlgorithmsOfSubstring/searchAlgorithmsOfSubstring.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RabinKarp.cs" />
+    <Compile Include="RabinKarp2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
